--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@capacitor/android": "^3.0.2",
+    "@capacitor/core": "^3.0.2",
+    "@capacitor/ios": "^3.0.2",
+    "@capacitor/keyboard": "^1.0.2",
     "@ionic/angular": "^5.5.2",
     "@ngrx/effects": "^12.1.0",
     "@ngrx/store": "^12.1.0",
@@ -39,6 +43,7 @@
     "@angular/compiler": "~12.0.1",
     "@angular/compiler-cli": "~12.0.1",
     "@angular/language-service": "~12.0.1",
+    "@capacitor/cli": "3.0.2",
     "@ionic/angular-toolkit": "^4.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
