--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/core": "^3.0.2",
     "@capacitor/ios": "^3.0.2",
     "@capacitor/keyboard": "^1.0.2",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^5.5.2",
     "@ngrx/effects": "^12.1.0",
     "@ngrx/store": "^12.1.0",
